<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context="com.github.miki48ru.ledlampeconomist.LampFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PageTitle"
            android:text="Тариф на электричество" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Description"
            android:text="@string/electric_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FieldLabel"
            android:text="Стоимость тарифа, рублей за кВт • час" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_price" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FieldLabel"
            android:text="@string/tv_time_work_in_day" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_hours" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FieldLabel"
            android:text="@string/tv_percent" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_percent" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Subhead"
            android:text="@string/tv_counter"
            android:id="@+id/sw_double_tax"
            />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/tax_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tax_2_price"
                style="@style/FieldLabel"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/et_price_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tax_2_time_year"
                style="@style/FieldLabel"
                android:id="@+id/textView5" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_hours_2" />
        </LinearLayout>

    </LinearLayout>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonNext"
            android:drawableRight="@drawable/ic_r_arr"
            android:text="@string/bt_next"
            android:paddingRight="10dp"
            android:id="@+id/btNextElectric"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</FrameLayout>
