
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp"
    tools:context="com.github.miki48ru.ledlampeconomist.LampFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PageTitle"
            android:text="Тариф на электричество" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Description"
            android:text="@string/economy_description" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llresults">

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Description"
            android:text="@string/tv_close_text"/>


    </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/buttonNext"
            android:text="@string/bt_new_start"
            android:textAllCaps="false"
            android:paddingRight="10dp"
            android:id="@+id/btNewStart"
            android:layout_marginBottom="5dp" />

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_more_info"
            style="@style/buttonMore"
            android:textAllCaps="false"
            android:paddingRight="10dp"
            android:id="@+id/btMoreInfo"
            android:layout_alignParentBottom="true"
            android:background="#aae6dcdc" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
